--- a/speedtest.html
+++ b/speedtest.html
@@ -901,3 +901,6 @@
 <HTML><BODY><h1>speedtest, 58.23 Mbit/s
 , 58.66 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 80.93 Mbit/s
+, 58.23 Mbit/s
+</h1></BODY></HTML>
