--- a/speedtest.html
+++ b/speedtest.html
@@ -913,3 +913,6 @@
 <HTML><BODY><h1>speedtest, 107.65 Mbit/s
 , 80.93 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 102.06 Mbit/s
+, 107.65 Mbit/s
+</h1></BODY></HTML>
