--- a/speedtest.html
+++ b/speedtest.html
@@ -916,3 +916,6 @@
 <HTML><BODY><h1>speedtest, 102.06 Mbit/s
 , 107.65 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 93.94 Mbit/s
+, 102.06 Mbit/s
+</h1></BODY></HTML>
