--- a/speedtest.html
+++ b/speedtest.html
@@ -922,3 +922,6 @@
 <HTML><BODY><h1>speedtest, 90.17 Mbit/s
 , 93.94 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 86.58 Mbit/s
+, 90.17 Mbit/s
+</h1></BODY></HTML>
