--- a/speedtest.html
+++ b/speedtest.html
@@ -928,3 +928,6 @@
 <HTML><BODY><h1>speedtest, 86.58 Mbit/s
 , 90.17 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 70.43 Mbit/s
+, 86.58 Mbit/s
+</h1></BODY></HTML>
