--- a/speedtest.html
+++ b/speedtest.html
@@ -934,3 +934,6 @@
 <HTML><BODY><h1>speedtest, 6.32 Mbit/s
 , 70.43 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 47.01 Mbit/s
+, 6.32 Mbit/s
+</h1></BODY></HTML>
