--- a/speedtest.html
+++ b/speedtest.html
@@ -946,3 +946,6 @@
 <HTML><BODY><h1>speedtest, 85.57 Mbit/s
 , 47.70 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 85.57 Mbit/s
+, 47.70 Mbit/s
+</h1></BODY></HTML>
