--- a/speedtest.html
+++ b/speedtest.html
@@ -952,3 +952,6 @@
 <HTML><BODY><h1>speedtest, 42.64 Mbit/s
 , 85.57 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 40.35 Mbit/s
+, 42.64 Mbit/s
+</h1></BODY></HTML>
