--- a/speedtest.html
+++ b/speedtest.html
@@ -958,3 +958,6 @@
 <HTML><BODY><h1>speedtest, 106.89 Mbit/s
 , 40.35 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 151.06 Mbit/s
+, 106.89 Mbit/s
+</h1></BODY></HTML>
