--- a/speedtest.html
+++ b/speedtest.html
@@ -961,3 +961,6 @@
 <HTML><BODY><h1>speedtest, 151.06 Mbit/s
 , 106.89 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 151.06 Mbit/s
+, 106.89 Mbit/s
+</h1></BODY></HTML>
