--- a/speedtest.html
+++ b/speedtest.html
@@ -970,3 +970,6 @@
 <HTML><BODY><h1>speedtest, 108.84 Mbit/s
 , 77.45 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 77.61 Mbit/s
+, 108.84 Mbit/s
+</h1></BODY></HTML>
