--- a/speedtest.html
+++ b/speedtest.html
@@ -982,3 +982,6 @@
 <HTML><BODY><h1>speedtest, 168.29 Mbit/s
 , 116.87 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 168.29 Mbit/s
+, 116.87 Mbit/s
+</h1></BODY></HTML>
