--- a/speedtest.html
+++ b/speedtest.html
@@ -985,3 +985,6 @@
 <HTML><BODY><h1>speedtest, 168.29 Mbit/s
 , 116.87 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 97.60 Mbit/s
+, 168.29 Mbit/s
+</h1></BODY></HTML>
