--- a/speedtest.html
+++ b/speedtest.html
@@ -988,3 +988,6 @@
 <HTML><BODY><h1>speedtest, 97.60 Mbit/s
 , 168.29 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 69.85 Mbit/s
+, 97.60 Mbit/s
+</h1></BODY></HTML>
