--- a/speedtest.html
+++ b/speedtest.html
@@ -991,3 +991,6 @@
 <HTML><BODY><h1>speedtest, 69.85 Mbit/s
 , 97.60 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 68.09 Mbit/s
+, 69.85 Mbit/s
+</h1></BODY></HTML>
