--- a/speedtest.html
+++ b/speedtest.html
@@ -994,3 +994,6 @@
 <HTML><BODY><h1>speedtest, 68.09 Mbit/s
 , 69.85 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 131.20 Mbit/s
+, 68.09 Mbit/s
+</h1></BODY></HTML>
