--- a/speedtest.html
+++ b/speedtest.html
@@ -1000,3 +1000,6 @@
 <HTML><BODY><h1>speedtest, 131.20 Mbit/s
 , 68.09 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 62.41 Mbit/s
+, 131.20 Mbit/s
+</h1></BODY></HTML>
