--- a/speedtest.html
+++ b/speedtest.html
@@ -1006,3 +1006,6 @@
 <HTML><BODY><h1>speedtest, 90.21 Mbit/s
 , 62.41 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 87.00 Mbit/s
+, 90.21 Mbit/s
+</h1></BODY></HTML>
