--- a/speedtest.html
+++ b/speedtest.html
@@ -1009,3 +1009,6 @@
 <HTML><BODY><h1>speedtest, 87.00 Mbit/s
 , 90.21 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 101.41 Mbit/s
+, 87.00 Mbit/s
+</h1></BODY></HTML>
