--- a/speedtest.html
+++ b/speedtest.html
@@ -1015,3 +1015,6 @@
 <HTML><BODY><h1>speedtest, 64.91 Mbit/s
 , 101.41 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 64.91 Mbit/s
+, 101.41 Mbit/s
+</h1></BODY></HTML>
