--- a/speedtest.html
+++ b/speedtest.html
@@ -1024,3 +1024,6 @@
 <HTML><BODY><h1>speedtest, 118.87 Mbit/s
 , 64.91 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 117.44 Mbit/s
+, 118.87 Mbit/s
+</h1></BODY></HTML>
