--- a/speedtest.html
+++ b/speedtest.html
@@ -1027,3 +1027,6 @@
 <HTML><BODY><h1>speedtest, 117.44 Mbit/s
 , 118.87 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 54.48 Mbit/s
+, 117.44 Mbit/s
+</h1></BODY></HTML>
