--- a/speedtest.html
+++ b/speedtest.html
@@ -1030,3 +1030,6 @@
 <HTML><BODY><h1>speedtest, 54.48 Mbit/s
 , 117.44 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 93.93 Mbit/s
+, 54.48 Mbit/s
+</h1></BODY></HTML>
