--- a/speedtest.html
+++ b/speedtest.html
@@ -1033,3 +1033,6 @@
 <HTML><BODY><h1>speedtest, 93.93 Mbit/s
 , 54.48 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 93.93 Mbit/s
+, 54.48 Mbit/s
+</h1></BODY></HTML>
