--- a/speedtest.html
+++ b/speedtest.html
@@ -1036,3 +1036,6 @@
 <HTML><BODY><h1>speedtest, 93.93 Mbit/s
 , 54.48 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 93.98 Mbit/s
+, 93.93 Mbit/s
+</h1></BODY></HTML>
