--- a/speedtest.html
+++ b/speedtest.html
@@ -1039,3 +1039,6 @@
 <HTML><BODY><h1>speedtest, 93.98 Mbit/s
 , 93.93 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 55.48 Mbit/s
+, 93.98 Mbit/s
+</h1></BODY></HTML>
