--- a/speedtest.html
+++ b/speedtest.html
@@ -1042,3 +1042,6 @@
 <HTML><BODY><h1>speedtest, 55.48 Mbit/s
 , 93.98 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 47.81 Mbit/s
+, 55.48 Mbit/s
+</h1></BODY></HTML>
