--- a/speedtest.html
+++ b/speedtest.html
@@ -1045,3 +1045,6 @@
 <HTML><BODY><h1>speedtest, 47.81 Mbit/s
 , 55.48 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 56.39 Mbit/s
+, 47.81 Mbit/s
+</h1></BODY></HTML>
