--- a/speedtest.html
+++ b/speedtest.html
@@ -1048,3 +1048,6 @@
 <HTML><BODY><h1>speedtest, 56.39 Mbit/s
 , 47.81 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 103.54 Mbit/s
+, 56.39 Mbit/s
+</h1></BODY></HTML>
