--- a/speedtest.html
+++ b/speedtest.html
@@ -1051,3 +1051,6 @@
 <HTML><BODY><h1>speedtest, 103.54 Mbit/s
 , 56.39 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 103.54 Mbit/s
+, 56.39 Mbit/s
+</h1></BODY></HTML>
