--- a/speedtest.html
+++ b/speedtest.html
@@ -1063,3 +1063,6 @@
 <HTML><BODY><h1>speedtest, 111.90 Mbit/s
 , 119.66 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 42.55 Mbit/s
+, 111.90 Mbit/s
+</h1></BODY></HTML>
