--- a/speedtest.html
+++ b/speedtest.html
@@ -1069,3 +1069,6 @@
 <HTML><BODY><h1>speedtest, 87.66 Mbit/s
 , 42.55 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 87.66 Mbit/s
+, 42.55 Mbit/s
+</h1></BODY></HTML>
