--- a/speedtest.html
+++ b/speedtest.html
@@ -1072,3 +1072,6 @@
 <HTML><BODY><h1>speedtest, 87.66 Mbit/s
 , 42.55 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 85.22 Mbit/s
+, 87.66 Mbit/s
+</h1></BODY></HTML>
