--- a/speedtest.html
+++ b/speedtest.html
@@ -1084,3 +1084,6 @@
 <HTML><BODY><h1>speedtest, 58.60 Mbit/s
 , 37.00 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 65.28 Mbit/s
+, 58.60 Mbit/s
+</h1></BODY></HTML>
