--- a/speedtest.html
+++ b/speedtest.html
@@ -1087,3 +1087,6 @@
 <HTML><BODY><h1>speedtest, 65.28 Mbit/s
 , 58.60 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 65.28 Mbit/s
+, 58.60 Mbit/s
+</h1></BODY></HTML>
