--- a/speedtest.html
+++ b/speedtest.html
@@ -1105,3 +1105,6 @@
 <HTML><BODY><h1>speedtest, 38.52 Mbit/s
 , 68.28 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 38.52 Mbit/s
+, 68.28 Mbit/s
+</h1></BODY></HTML>
