--- a/speedtest.html
+++ b/speedtest.html
@@ -1111,3 +1111,6 @@
 <HTML><BODY><h1>speedtest, 48.10 Mbit/s
 , 38.52 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 69.24 Mbit/s
+, 48.10 Mbit/s
+</h1></BODY></HTML>
