--- a/speedtest.html
+++ b/speedtest.html
@@ -1114,3 +1114,6 @@
 <HTML><BODY><h1>speedtest, 69.24 Mbit/s
 , 48.10 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 51.97 Mbit/s
+, 69.24 Mbit/s
+</h1></BODY></HTML>
