--- a/speedtest.html
+++ b/speedtest.html
@@ -1120,3 +1120,6 @@
 <HTML><BODY><h1>speedtest, 67.04 Mbit/s
 , 51.97 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 115.16 Mbit/s
+, 67.04 Mbit/s
+</h1></BODY></HTML>
