--- a/speedtest.html
+++ b/speedtest.html
@@ -1126,3 +1126,6 @@
 <HTML><BODY><h1>speedtest, 115.16 Mbit/s
 , 67.04 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 115.16 Mbit/s
+, 67.04 Mbit/s
+</h1></BODY></HTML>
