--- a/speedtest.html
+++ b/speedtest.html
@@ -1132,3 +1132,6 @@
 <HTML><BODY><h1>speedtest, 66.36 Mbit/s
 , 115.16 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 101.11 Mbit/s
+, 66.36 Mbit/s
+</h1></BODY></HTML>
