--- a/speedtest.html
+++ b/speedtest.html
@@ -1135,3 +1135,6 @@
 <HTML><BODY><h1>speedtest, 101.11 Mbit/s
 , 66.36 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 55.82 Mbit/s
+, 101.11 Mbit/s
+</h1></BODY></HTML>
