--- a/speedtest.html
+++ b/speedtest.html
@@ -1138,3 +1138,6 @@
 <HTML><BODY><h1>speedtest, 55.82 Mbit/s
 , 101.11 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 70.07 Mbit/s
+, 55.82 Mbit/s
+</h1></BODY></HTML>
