--- a/speedtest.html
+++ b/speedtest.html
@@ -1144,3 +1144,6 @@
 <HTML><BODY><h1>speedtest, 70.07 Mbit/s
 , 55.82 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 68.99 Mbit/s
+, 70.07 Mbit/s
+</h1></BODY></HTML>
