--- a/speedtest.html
+++ b/speedtest.html
@@ -1147,3 +1147,6 @@
 <HTML><BODY><h1>speedtest, 68.99 Mbit/s
 , 70.07 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 152.57 Mbit/s
+, 68.99 Mbit/s
+</h1></BODY></HTML>
