--- a/speedtest.html
+++ b/speedtest.html
@@ -1159,3 +1159,6 @@
 <HTML><BODY><h1>speedtest, 87.67 Mbit/s
 , 79.60 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 87.67 Mbit/s
+, 79.60 Mbit/s
+</h1></BODY></HTML>
