--- a/speedtest.html
+++ b/speedtest.html
@@ -1165,3 +1165,6 @@
 <HTML><BODY><h1>speedtest, 87.67 Mbit/s
 , 79.60 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 78.96 Mbit/s
+, 87.67 Mbit/s
+</h1></BODY></HTML>
