--- a/speedtest.html
+++ b/speedtest.html
@@ -1177,3 +1177,6 @@
 <HTML><BODY><h1>speedtest, 58.80 Mbit/s
 , 103.82 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 58.80 Mbit/s
+, 103.82 Mbit/s
+</h1></BODY></HTML>
