--- a/speedtest.html
+++ b/speedtest.html
@@ -1180,3 +1180,6 @@
 <HTML><BODY><h1>speedtest, 58.80 Mbit/s
 , 103.82 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 1.50 Mbit/s
+, 58.80 Mbit/s
+</h1></BODY></HTML>
