--- a/speedtest.html
+++ b/speedtest.html
@@ -1183,3 +1183,6 @@
 <HTML><BODY><h1>speedtest, 1.50 Mbit/s
 , 58.80 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 108.32 Mbit/s
+, 1.50 Mbit/s
+</h1></BODY></HTML>
