--- a/speedtest.html
+++ b/speedtest.html
@@ -1186,3 +1186,6 @@
 <HTML><BODY><h1>speedtest, 108.32 Mbit/s
 , 1.50 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 137.36 Mbit/s
+, 108.32 Mbit/s
+</h1></BODY></HTML>
