--- a/speedtest.html
+++ b/speedtest.html
@@ -1189,3 +1189,6 @@
 <HTML><BODY><h1>speedtest, 137.36 Mbit/s
 , 108.32 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 48.06 Mbit/s
+, 137.36 Mbit/s
+</h1></BODY></HTML>
