--- a/speedtest.html
+++ b/speedtest.html
@@ -1192,3 +1192,6 @@
 <HTML><BODY><h1>speedtest, 48.06 Mbit/s
 , 137.36 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 175.20 Mbit/s
+, 48.06 Mbit/s
+</h1></BODY></HTML>
