--- a/speedtest.html
+++ b/speedtest.html
@@ -1195,3 +1195,6 @@
 <HTML><BODY><h1>speedtest, 175.20 Mbit/s
 , 48.06 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 175.20 Mbit/s
+, 48.06 Mbit/s
+</h1></BODY></HTML>
