--- a/speedtest.html
+++ b/speedtest.html
@@ -1210,3 +1210,6 @@
 <HTML><BODY><h1>speedtest, 89.69 Mbit/s
 , 162.13 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 181.86 Mbit/s
+, 89.69 Mbit/s
+</h1></BODY></HTML>
