--- a/speedtest.html
+++ b/speedtest.html
@@ -1216,3 +1216,6 @@
 <HTML><BODY><h1>speedtest, 181.86 Mbit/s
 , 89.69 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 73.24 Mbit/s
+, 181.86 Mbit/s
+</h1></BODY></HTML>
