--- a/speedtest.html
+++ b/speedtest.html
@@ -1219,3 +1219,6 @@
 <HTML><BODY><h1>speedtest, 73.24 Mbit/s
 , 181.86 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 153.60 Mbit/s
+, 73.24 Mbit/s
+</h1></BODY></HTML>
