--- a/speedtest.html
+++ b/speedtest.html
@@ -1222,3 +1222,6 @@
 <HTML><BODY><h1>speedtest, 153.60 Mbit/s
 , 73.24 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 132.27 Mbit/s
+, 153.60 Mbit/s
+</h1></BODY></HTML>
