--- a/speedtest.html
+++ b/speedtest.html
@@ -1225,3 +1225,6 @@
 <HTML><BODY><h1>speedtest, 132.27 Mbit/s
 , 153.60 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 151.82 Mbit/s
+, 132.27 Mbit/s
+</h1></BODY></HTML>
