--- a/speedtest.html
+++ b/speedtest.html
@@ -1231,3 +1231,6 @@
 <HTML><BODY><h1>speedtest, 189.58 Mbit/s
 , 151.82 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 189.58 Mbit/s
+, 151.82 Mbit/s
+</h1></BODY></HTML>
