--- a/speedtest.html
+++ b/speedtest.html
@@ -1234,3 +1234,6 @@
 <HTML><BODY><h1>speedtest, 189.58 Mbit/s
 , 151.82 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 191.27 Mbit/s
+, 189.58 Mbit/s
+</h1></BODY></HTML>
