--- a/speedtest.html
+++ b/speedtest.html
@@ -1237,3 +1237,6 @@
 <HTML><BODY><h1>speedtest, 191.27 Mbit/s
 , 189.58 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 133.55 Mbit/s
+, 191.27 Mbit/s
+</h1></BODY></HTML>
