--- a/speedtest.html
+++ b/speedtest.html
@@ -1243,3 +1243,6 @@
 <HTML><BODY><h1>speedtest, 156.13 Mbit/s
 , 133.55 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 143.24 Mbit/s
+, 156.13 Mbit/s
+</h1></BODY></HTML>
