--- a/speedtest.html
+++ b/speedtest.html
@@ -1249,3 +1249,6 @@
 <HTML><BODY><h1>speedtest, 143.24 Mbit/s
 , 156.13 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 194.53 Mbit/s
+, 143.24 Mbit/s
+</h1></BODY></HTML>
