--- a/speedtest.html
+++ b/speedtest.html
@@ -1255,3 +1255,6 @@
 <HTML><BODY><h1>speedtest, 134.49 Mbit/s
 , 194.53 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 76.62 Mbit/s
+, 134.49 Mbit/s
+</h1></BODY></HTML>
