--- a/speedtest.html
+++ b/speedtest.html
@@ -1258,3 +1258,6 @@
 <HTML><BODY><h1>speedtest, 76.62 Mbit/s
 , 134.49 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 196.30 Mbit/s
+, 76.62 Mbit/s
+</h1></BODY></HTML>
