--- a/speedtest.html
+++ b/speedtest.html
@@ -1261,3 +1261,6 @@
 <HTML><BODY><h1>speedtest, 196.30 Mbit/s
 , 76.62 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 133.55 Mbit/s
+, 196.30 Mbit/s
+</h1></BODY></HTML>
