--- a/speedtest.html
+++ b/speedtest.html
@@ -1276,3 +1276,6 @@
 <HTML><BODY><h1>speedtest, 132.55 Mbit/s
 , 138.14 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 137.84 Mbit/s
+, 132.55 Mbit/s
+</h1></BODY></HTML>
