--- a/speedtest.html
+++ b/speedtest.html
@@ -1279,3 +1279,6 @@
 <HTML><BODY><h1>speedtest, 137.84 Mbit/s
 , 132.55 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 88.94 Mbit/s
+, 137.84 Mbit/s
+</h1></BODY></HTML>
