--- a/speedtest.html
+++ b/speedtest.html
@@ -1288,3 +1288,6 @@
 <HTML><BODY><h1>speedtest, 80.42 Mbit/s
 , 88.94 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 66.91 Mbit/s
+, 80.42 Mbit/s
+</h1></BODY></HTML>
