--- a/speedtest.html
+++ b/speedtest.html
@@ -1291,3 +1291,6 @@
 <HTML><BODY><h1>speedtest, 66.91 Mbit/s
 , 80.42 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 52.15 Mbit/s
+, 66.91 Mbit/s
+</h1></BODY></HTML>
