--- a/speedtest.html
+++ b/speedtest.html
@@ -1297,3 +1297,6 @@
 <HTML><BODY><h1>speedtest, 61.50 Mbit/s
 , 52.15 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 59.82 Mbit/s
+, 61.50 Mbit/s
+</h1></BODY></HTML>
