--- a/speedtest.html
+++ b/speedtest.html
@@ -1300,3 +1300,6 @@
 <HTML><BODY><h1>speedtest, 59.82 Mbit/s
 , 61.50 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 59.82 Mbit/s
+, 61.50 Mbit/s
+</h1></BODY></HTML>
