--- a/speedtest.html
+++ b/speedtest.html
@@ -1309,3 +1309,6 @@
 <HTML><BODY><h1>speedtest, 58.69 Mbit/s
 , 59.82 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 51.29 Mbit/s
+, 58.69 Mbit/s
+</h1></BODY></HTML>
