--- a/speedtest.html
+++ b/speedtest.html
@@ -1312,3 +1312,6 @@
 <HTML><BODY><h1>speedtest, 51.29 Mbit/s
 , 58.69 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 28.98 Mbit/s
+, 51.29 Mbit/s
+</h1></BODY></HTML>
