--- a/speedtest.html
+++ b/speedtest.html
@@ -1321,3 +1321,6 @@
 <HTML><BODY><h1>speedtest, 59.63 Mbit/s
 , 28.98 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 64.09 Mbit/s
+, 59.63 Mbit/s
+</h1></BODY></HTML>
