--- a/speedtest.html
+++ b/speedtest.html
@@ -1327,3 +1327,6 @@
 <HTML><BODY><h1>speedtest, 63.84 Mbit/s
 , 64.09 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 94.38 Mbit/s
+, 63.84 Mbit/s
+</h1></BODY></HTML>
