--- a/speedtest.html
+++ b/speedtest.html
@@ -1330,3 +1330,6 @@
 <HTML><BODY><h1>speedtest, 94.38 Mbit/s
 , 63.84 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 89.60 Mbit/s
+, 94.38 Mbit/s
+</h1></BODY></HTML>
