--- a/speedtest.html
+++ b/speedtest.html
@@ -1336,3 +1336,6 @@
 <HTML><BODY><h1>speedtest, 60.71 Mbit/s
 , 89.60 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 60.71 Mbit/s
+, 89.60 Mbit/s
+</h1></BODY></HTML>
