--- a/speedtest.html
+++ b/speedtest.html
@@ -1342,3 +1342,6 @@
 <HTML><BODY><h1>speedtest, 60.71 Mbit/s
 , 89.60 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 78.70 Mbit/s
+, 60.71 Mbit/s
+</h1></BODY></HTML>
