--- a/speedtest.html
+++ b/speedtest.html
@@ -1345,3 +1345,6 @@
 <HTML><BODY><h1>speedtest, 78.70 Mbit/s
 , 60.71 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 47.34 Mbit/s
+, 78.70 Mbit/s
+</h1></BODY></HTML>
