--- a/speedtest.html
+++ b/speedtest.html
@@ -1354,3 +1354,6 @@
 <HTML><BODY><h1>speedtest, 58.61 Mbit/s
 , 45.50 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 58.61 Mbit/s
+, 45.50 Mbit/s
+</h1></BODY></HTML>
