--- a/speedtest.html
+++ b/speedtest.html
@@ -1357,3 +1357,6 @@
 <HTML><BODY><h1>speedtest, 58.61 Mbit/s
 , 45.50 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 80.62 Mbit/s
+, 58.61 Mbit/s
+</h1></BODY></HTML>
