--- a/speedtest.html
+++ b/speedtest.html
@@ -1360,3 +1360,6 @@
 <HTML><BODY><h1>speedtest, 80.62 Mbit/s
 , 58.61 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 55.15 Mbit/s
+, 80.62 Mbit/s
+</h1></BODY></HTML>
