--- a/speedtest.html
+++ b/speedtest.html
@@ -1378,3 +1378,6 @@
 <HTML><BODY><h1>speedtest, 81.87 Mbit/s
 , 64.81 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 56.79 Mbit/s
+, 81.87 Mbit/s
+</h1></BODY></HTML>
