--- a/speedtest.html
+++ b/speedtest.html
@@ -1387,3 +1387,6 @@
 <HTML><BODY><h1>speedtest, 49.30 Mbit/s
 , 56.66 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 103.65 Mbit/s
+, 49.30 Mbit/s
+</h1></BODY></HTML>
