--- a/speedtest.html
+++ b/speedtest.html
@@ -1390,3 +1390,6 @@
 <HTML><BODY><h1>speedtest, 103.65 Mbit/s
 , 49.30 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 103.65 Mbit/s
+, 49.30 Mbit/s
+</h1></BODY></HTML>
