--- a/speedtest.html
+++ b/speedtest.html
@@ -1402,3 +1402,6 @@
 <HTML><BODY><h1>speedtest, 84.31 Mbit/s
 , 87.05 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 79.92 Mbit/s
+, 84.31 Mbit/s
+</h1></BODY></HTML>
