--- a/speedtest.html
+++ b/speedtest.html
@@ -1414,3 +1414,6 @@
 <HTML><BODY><h1>speedtest, 77.15 Mbit/s
 , 79.92 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 161.72 Mbit/s
+, 77.15 Mbit/s
+</h1></BODY></HTML>
