--- a/speedtest.html
+++ b/speedtest.html
@@ -1417,3 +1417,6 @@
 <HTML><BODY><h1>speedtest, 161.72 Mbit/s
 , 77.15 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 77.49 Mbit/s
+, 161.72 Mbit/s
+</h1></BODY></HTML>
