--- a/speedtest.html
+++ b/speedtest.html
@@ -1429,3 +1429,6 @@
 <HTML><BODY><h1>speedtest, 182.97 Mbit/s
 , 173.35 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 81.65 Mbit/s
+, 182.97 Mbit/s
+</h1></BODY></HTML>
