--- a/speedtest.html
+++ b/speedtest.html
@@ -1441,3 +1441,6 @@
 <HTML><BODY><h1>speedtest, 53.77 Mbit/s
 , 202.95 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 80.71 Mbit/s
+, 53.77 Mbit/s
+</h1></BODY></HTML>
