--- a/speedtest.html
+++ b/speedtest.html
@@ -1450,3 +1450,6 @@
 <HTML><BODY><h1>speedtest, 80.71 Mbit/s
 , 53.77 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 175.70 Mbit/s
+, 80.71 Mbit/s
+</h1></BODY></HTML>
