--- a/speedtest.html
+++ b/speedtest.html
@@ -1453,3 +1453,6 @@
 <HTML><BODY><h1>speedtest, 175.70 Mbit/s
 , 80.71 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 88.63 Mbit/s
+, 175.70 Mbit/s
+</h1></BODY></HTML>
