--- a/speedtest.html
+++ b/speedtest.html
@@ -1459,3 +1459,6 @@
 <HTML><BODY><h1>speedtest, 197.82 Mbit/s
 , 88.63 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 160.66 Mbit/s
+, 197.82 Mbit/s
+</h1></BODY></HTML>
