--- a/speedtest.html
+++ b/speedtest.html
@@ -1468,3 +1468,6 @@
 <HTML><BODY><h1>speedtest, 51.51 Mbit/s
 , 160.66 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 221.45 Mbit/s
+, 51.51 Mbit/s
+</h1></BODY></HTML>
