--- a/speedtest.html
+++ b/speedtest.html
@@ -1471,3 +1471,6 @@
 <HTML><BODY><h1>speedtest, 221.45 Mbit/s
 , 51.51 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 158.09 Mbit/s
+, 221.45 Mbit/s
+</h1></BODY></HTML>
