--- a/speedtest.html
+++ b/speedtest.html
@@ -1474,3 +1474,6 @@
 <HTML><BODY><h1>speedtest, 158.09 Mbit/s
 , 221.45 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 64.08 Mbit/s
+, 158.09 Mbit/s
+</h1></BODY></HTML>
