--- a/speedtest.html
+++ b/speedtest.html
@@ -1477,3 +1477,6 @@
 <HTML><BODY><h1>speedtest, 64.08 Mbit/s
 , 158.09 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 165.81 Mbit/s
+, 64.08 Mbit/s
+</h1></BODY></HTML>
