--- a/speedtest.html
+++ b/speedtest.html
@@ -1480,3 +1480,6 @@
 <HTML><BODY><h1>speedtest, 165.81 Mbit/s
 , 64.08 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 165.81 Mbit/s
+, 64.08 Mbit/s
+</h1></BODY></HTML>
