--- a/speedtest.html
+++ b/speedtest.html
@@ -1492,3 +1492,6 @@
 <HTML><BODY><h1>speedtest, 94.34 Mbit/s
 , 66.70 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 66.04 Mbit/s
+, 94.34 Mbit/s
+</h1></BODY></HTML>
