--- a/speedtest.html
+++ b/speedtest.html
@@ -1495,3 +1495,6 @@
 <HTML><BODY><h1>speedtest, 66.04 Mbit/s
 , 94.34 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 60.94 Mbit/s
+, 66.04 Mbit/s
+</h1></BODY></HTML>
