--- a/speedtest.html
+++ b/speedtest.html
@@ -1498,3 +1498,6 @@
 <HTML><BODY><h1>speedtest, 60.94 Mbit/s
 , 66.04 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 60.94 Mbit/s
+, 66.04 Mbit/s
+</h1></BODY></HTML>
