--- a/speedtest.html
+++ b/speedtest.html
@@ -1501,3 +1501,6 @@
 <HTML><BODY><h1>speedtest, 60.94 Mbit/s
 , 66.04 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 95.07 Mbit/s
+, 60.94 Mbit/s
+</h1></BODY></HTML>
