--- a/speedtest.html
+++ b/speedtest.html
@@ -1504,3 +1504,6 @@
 <HTML><BODY><h1>speedtest, 95.07 Mbit/s
 , 60.94 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 53.59 Mbit/s
+, 95.07 Mbit/s
+</h1></BODY></HTML>
