--- a/speedtest.html
+++ b/speedtest.html
@@ -1522,3 +1522,6 @@
 <HTML><BODY><h1>speedtest, 97.77 Mbit/s
 , 89.91 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 47.04 Mbit/s
+, 97.77 Mbit/s
+</h1></BODY></HTML>
