--- a/speedtest.html
+++ b/speedtest.html
@@ -1528,3 +1528,6 @@
 <HTML><BODY><h1>speedtest, 90.21 Mbit/s
 , 47.04 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 71.86 Mbit/s
+, 90.21 Mbit/s
+</h1></BODY></HTML>
