--- a/speedtest.html
+++ b/speedtest.html
@@ -1531,3 +1531,6 @@
 <HTML><BODY><h1>speedtest, 71.86 Mbit/s
 , 90.21 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 96.26 Mbit/s
+, 71.86 Mbit/s
+</h1></BODY></HTML>
