--- a/speedtest.html
+++ b/speedtest.html
@@ -1543,3 +1543,6 @@
 <HTML><BODY><h1>speedtest, 104.40 Mbit/s
 , 102.05 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 59.26 Mbit/s
+, 104.40 Mbit/s
+</h1></BODY></HTML>
