--- a/speedtest.html
+++ b/speedtest.html
@@ -1546,3 +1546,6 @@
 <HTML><BODY><h1>speedtest, 59.26 Mbit/s
 , 104.40 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 127.01 Mbit/s
+, 59.26 Mbit/s
+</h1></BODY></HTML>
