--- a/speedtest.html
+++ b/speedtest.html
@@ -1552,3 +1552,6 @@
 <HTML><BODY><h1>speedtest, 138.77 Mbit/s
 , 127.01 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 138.77 Mbit/s
+, 127.01 Mbit/s
+</h1></BODY></HTML>
