--- a/speedtest.html
+++ b/speedtest.html
@@ -1567,3 +1567,6 @@
 <HTML><BODY><h1>speedtest, 42.97 Mbit/s
 , 85.20 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 41.87 Mbit/s
+, 42.97 Mbit/s
+</h1></BODY></HTML>
