--- a/speedtest.html
+++ b/speedtest.html
@@ -1570,3 +1570,6 @@
 <HTML><BODY><h1>speedtest, 41.87 Mbit/s
 , 42.97 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 41.87 Mbit/s
+, 42.97 Mbit/s
+</h1></BODY></HTML>
