--- a/speedtest.html
+++ b/speedtest.html
@@ -1573,3 +1573,6 @@
 <HTML><BODY><h1>speedtest, 41.87 Mbit/s
 , 42.97 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 84.03 Mbit/s
+, 41.87 Mbit/s
+</h1></BODY></HTML>
