--- a/speedtest.html
+++ b/speedtest.html
@@ -1579,3 +1579,6 @@
 <HTML><BODY><h1>speedtest, 75.07 Mbit/s
 , 84.03 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 73.67 Mbit/s
+, 75.07 Mbit/s
+</h1></BODY></HTML>
