--- a/speedtest.html
+++ b/speedtest.html
@@ -1582,3 +1582,6 @@
 <HTML><BODY><h1>speedtest, 73.67 Mbit/s
 , 75.07 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 107.73 Mbit/s
+, 73.67 Mbit/s
+</h1></BODY></HTML>
