--- a/speedtest.html
+++ b/speedtest.html
@@ -1594,3 +1594,6 @@
 <HTML><BODY><h1>speedtest, 150.67 Mbit/s
 , 107.73 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 74.37 Mbit/s
+, 150.67 Mbit/s
+</h1></BODY></HTML>
