--- a/speedtest.html
+++ b/speedtest.html
@@ -1603,3 +1603,6 @@
 <HTML><BODY><h1>speedtest, 97.96 Mbit/s
 , 64.78 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 130.09 Mbit/s
+, 97.96 Mbit/s
+</h1></BODY></HTML>
