--- a/speedtest.html
+++ b/speedtest.html
@@ -1606,3 +1606,6 @@
 <HTML><BODY><h1>speedtest, 130.09 Mbit/s
 , 97.96 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 130.09 Mbit/s
+, 97.96 Mbit/s
+</h1></BODY></HTML>
