--- a/speedtest.html
+++ b/speedtest.html
@@ -1609,3 +1609,6 @@
 <HTML><BODY><h1>speedtest, 130.09 Mbit/s
 , 97.96 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 137.89 Mbit/s
+, 130.09 Mbit/s
+</h1></BODY></HTML>
