--- a/speedtest.html
+++ b/speedtest.html
@@ -1615,3 +1615,6 @@
 <HTML><BODY><h1>speedtest, 141.42 Mbit/s
 , 137.89 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 146.15 Mbit/s
+, 141.42 Mbit/s
+</h1></BODY></HTML>
