--- a/speedtest.html
+++ b/speedtest.html
@@ -1618,3 +1618,6 @@
 <HTML><BODY><h1>speedtest, 146.15 Mbit/s
 , 141.42 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 131.01 Mbit/s
+, 146.15 Mbit/s
+</h1></BODY></HTML>
