--- a/speedtest.html
+++ b/speedtest.html
@@ -1624,3 +1624,6 @@
 <HTML><BODY><h1>speedtest, 148.18 Mbit/s
 , 131.01 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 148.18 Mbit/s
+, 131.01 Mbit/s
+</h1></BODY></HTML>
