--- a/speedtest.html
+++ b/speedtest.html
@@ -1630,3 +1630,6 @@
 <HTML><BODY><h1>speedtest, 148.18 Mbit/s
 , 131.01 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 110.66 Mbit/s
+, 148.18 Mbit/s
+</h1></BODY></HTML>
