--- a/speedtest.html
+++ b/speedtest.html
@@ -1642,3 +1642,6 @@
 <HTML><BODY><h1>speedtest, 134.03 Mbit/s
 , 144.55 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 134.03 Mbit/s
+, 144.55 Mbit/s
+</h1></BODY></HTML>
