--- a/speedtest.html
+++ b/speedtest.html
@@ -1645,3 +1645,6 @@
 <HTML><BODY><h1>speedtest, 134.03 Mbit/s
 , 144.55 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 123.45 Mbit/s
+, 134.03 Mbit/s
+</h1></BODY></HTML>
