--- a/speedtest.html
+++ b/speedtest.html
@@ -1651,3 +1651,6 @@
 <HTML><BODY><h1>speedtest, 123.84 Mbit/s
 , 123.45 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 136.70 Mbit/s
+, 123.84 Mbit/s
+</h1></BODY></HTML>
