--- a/speedtest.html
+++ b/speedtest.html
@@ -1657,3 +1657,6 @@
 <HTML><BODY><h1>speedtest, 48.92 Mbit/s
 , 136.70 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 113.75 Mbit/s
+, 48.92 Mbit/s
+</h1></BODY></HTML>
