--- a/speedtest.html
+++ b/speedtest.html
@@ -1669,3 +1669,6 @@
 <HTML><BODY><h1>speedtest, 123.15 Mbit/s
 , 113.75 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 142.69 Mbit/s
+, 123.15 Mbit/s
+</h1></BODY></HTML>
