--- a/speedtest.html
+++ b/speedtest.html
@@ -1672,3 +1672,6 @@
 <HTML><BODY><h1>speedtest, 142.69 Mbit/s
 , 123.15 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 123.41 Mbit/s
+, 142.69 Mbit/s
+</h1></BODY></HTML>
