--- a/speedtest.html
+++ b/speedtest.html
@@ -1675,3 +1675,6 @@
 <HTML><BODY><h1>speedtest, 123.41 Mbit/s
 , 142.69 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 132.90 Mbit/s
+, 123.41 Mbit/s
+</h1></BODY></HTML>
