--- a/speedtest.html
+++ b/speedtest.html
@@ -1678,3 +1678,6 @@
 <HTML><BODY><h1>speedtest, 132.90 Mbit/s
 , 123.41 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 132.90 Mbit/s
+, 123.41 Mbit/s
+</h1></BODY></HTML>
