--- a/speedtest.html
+++ b/speedtest.html
@@ -1684,3 +1684,6 @@
 <HTML><BODY><h1>speedtest, 97.66 Mbit/s
 , 132.90 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 59.43 Mbit/s
+, 97.66 Mbit/s
+</h1></BODY></HTML>
