--- a/speedtest.html
+++ b/speedtest.html
@@ -1693,3 +1693,6 @@
 <HTML><BODY><h1>speedtest, 4.40 Mbit/s
 , 145.95 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 146.28 Mbit/s
+, 4.40 Mbit/s
+</h1></BODY></HTML>
