--- a/speedtest.html
+++ b/speedtest.html
@@ -1702,3 +1702,6 @@
 <HTML><BODY><h1>speedtest, 146.28 Mbit/s
 , 4.40 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 127.23 Mbit/s
+, 146.28 Mbit/s
+</h1></BODY></HTML>
