--- a/speedtest.html
+++ b/speedtest.html
@@ -1705,3 +1705,6 @@
 <HTML><BODY><h1>speedtest, 127.23 Mbit/s
 , 146.28 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 125.72 Mbit/s
+, 127.23 Mbit/s
+</h1></BODY></HTML>
