--- a/speedtest.html
+++ b/speedtest.html
@@ -1708,3 +1708,6 @@
 <HTML><BODY><h1>speedtest, 125.72 Mbit/s
 , 127.23 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 128.57 Mbit/s
+, 125.72 Mbit/s
+</h1></BODY></HTML>
