--- a/speedtest.html
+++ b/speedtest.html
@@ -1711,3 +1711,6 @@
 <HTML><BODY><h1>speedtest, 128.57 Mbit/s
 , 125.72 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 142.14 Mbit/s
+, 128.57 Mbit/s
+</h1></BODY></HTML>
