--- a/speedtest.html
+++ b/speedtest.html
@@ -1720,3 +1720,6 @@
 <HTML><BODY><h1>speedtest, 146.63 Mbit/s
 , 142.14 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 144.38 Mbit/s
+, 146.63 Mbit/s
+</h1></BODY></HTML>
