--- a/speedtest.html
+++ b/speedtest.html
@@ -1726,3 +1726,6 @@
 <HTML><BODY><h1>speedtest, 150.12 Mbit/s
 , 144.38 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 114.54 Mbit/s
+, 150.12 Mbit/s
+</h1></BODY></HTML>
