--- a/speedtest.html
+++ b/speedtest.html
@@ -1729,3 +1729,6 @@
 <HTML><BODY><h1>speedtest, 114.54 Mbit/s
 , 150.12 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 173.57 Mbit/s
+, 114.54 Mbit/s
+</h1></BODY></HTML>
