--- a/speedtest.html
+++ b/speedtest.html
@@ -1735,3 +1735,6 @@
 <HTML><BODY><h1>speedtest, 173.57 Mbit/s
 , 114.54 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 173.57 Mbit/s
+, 114.54 Mbit/s
+</h1></BODY></HTML>
