--- a/speedtest.html
+++ b/speedtest.html
@@ -1741,3 +1741,6 @@
 <HTML><BODY><h1>speedtest, 147.84 Mbit/s
 , 173.57 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 103.87 Mbit/s
+, 147.84 Mbit/s
+</h1></BODY></HTML>
