--- a/speedtest.html
+++ b/speedtest.html
@@ -1747,3 +1747,6 @@
 <HTML><BODY><h1>speedtest, 150.75 Mbit/s
 , 103.87 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 158.12 Mbit/s
+, 150.75 Mbit/s
+</h1></BODY></HTML>
