--- a/speedtest.html
+++ b/speedtest.html
@@ -1750,3 +1750,6 @@
 <HTML><BODY><h1>speedtest, 158.12 Mbit/s
 , 150.75 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 158.12 Mbit/s
+, 150.75 Mbit/s
+</h1></BODY></HTML>
