--- a/speedtest.html
+++ b/speedtest.html
@@ -1753,3 +1753,6 @@
 <HTML><BODY><h1>speedtest, 158.12 Mbit/s
 , 150.75 Mbit/s
 </h1></BODY></HTML>
+<HTML><BODY><h1>speedtest, 127.53 Mbit/s
+, 158.12 Mbit/s
+</h1></BODY></HTML>
